--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -4,16 +4,28 @@
 
 .card {
     margin: 0 2% !important;
+    border-radius: 10px !important;
+    box-shadow: 0 2px 1px -1px rgb(58, 57, 57), 0 1px 1px 0 rgb(58, 57, 57),
+        0 1px 3px 0 rgb(58, 57, 57) !important;
 }
 
 .infected {
-    border-bottom: 10px solid rgba(0, 0, 255, 0.5);
+    /* border-bottom: 10px solid rgba(0, 0, 255, 0.5); */
+    background-color: rgba(130, 130, 248, 0.5) !important;
 }
 
 .recovered {
-    border-bottom: 10px solid rgba(0, 255, 0, 0.5);
+    /* border-bottom: 10px solid rgba(0, 255, 0, 0.5); */
+    background-color: rgba(112, 241, 112, 0.5) !important;
 }
 
 .deaths {
-    border-bottom: 10px solid rgba(255, 0, 0, 0.5);
+    /* border-bottom: 10px solid rgba(255, 0, 0, 0.5); */
+    background-color: rgba(252, 90, 90, 0.5) !important;
+}
+
+@media (max-width: 770px) {
+    .card {
+        margin: 2% 0 !important;
+    }
 }
